--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "through2": "^0.6.2",
     "minimist": "^1.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concat-stream": "^1.4.6",
+    "tape": "^3.0.0"
+  },
   "bin": {
     "docker-run": "./bin.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test.js"
   },
   "repository": {
     "type": "git",
